syntax = "proto3";

package paymentspb;
option go_package = "github.com/rezaAmiri123/microservice/payments/paymentspb";
// events

message InvoicePaid{
  string id =1;
  string order_id = 2;
}

// commands

message ConfirmPayment{
  string id=1;
  double amount=2;
}